[gd_scene load_steps=2 format=3 uid="uid://uee7o3tpg8sj"]

[ext_resource type="Script" uid="uid://dvlahrrtninjy" path="res://TitleScreens/DebugTitleScr/debug_title_screen.gd" id="1_jwvq1"]

[node name="DebugTitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwvq1")

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_right = 547.0
offset_bottom = 69.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Debugging Level Menu"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 1114.0
offset_top = 686.0
offset_right = 1276.0
offset_bottom = 715.0
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 70.0
offset_right = 397.0
grow_vertical = 2

[node name="TestLvl1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Phys and Trigger Test"

[node name="TestLvl2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Basic Env Test"

[node name="TestLvl3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Light & Gmtry Test"

[node name="TestLvl4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Trigger Light Test"

[node name="TestLvl5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Gameplay Test 1"

[node name="TestLvl6" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Door Test"

[node name="TestLvl7" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Kill Yourself"

[node name="ParticleRoom" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Particle Room"

[node name="BlenderImportTest" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Blender Import Test"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl1" to="." method="_on_tst_lvl_1_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl2" to="." method="_on_test_lvl_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl3" to="." method="_on_test_lvl_3_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl4" to="." method="_on_test_lvl_4_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl5" to="." method="_on_test_lvl_5_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl6" to="." method="_on_test_lvl_6_pressed"]
[connection signal="pressed" from="VBoxContainer/TestLvl7" to="." method="_on_test_lvl_7_pressed"]
[connection signal="pressed" from="VBoxContainer/ParticleRoom" to="." method="_on_particle_room_pressed"]
[connection signal="pressed" from="VBoxContainer/BlenderImportTest" to="." method="_on_blender_import_test_pressed"]
